// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 0 on graph 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Circle
      borderWidth={0}
      color="#00e0ff"
      formatText={[Function]}
      progress={0.000001}
      showsText={true}
      size={70}
      textStyle={
        Object {
          "color": "#2D3B45",
          "fontFamily": ".SFUIDisplay-medium",
          "fontSize": 16,
        }
      }
      thickness={7}
      unfilledColor="#F5F5F5"
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 8,
          "textAlign": "center",
        },
        Object {
          "fontFamily": ".SFUIDisplay-medium",
        },
      ]
    }
  >
    foo
  </Text>
</View>
`;

exports[`render 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Circle
      borderWidth={0}
      color="#00e0ff"
      formatText={[Function]}
      progress={0.000001}
      showsText={true}
      size={70}
      textStyle={
        Object {
          "color": "#2D3B45",
          "fontFamily": ".SFUIDisplay-medium",
          "fontSize": 16,
        }
      }
      thickness={7}
      unfilledColor="#F5F5F5"
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 8,
          "textAlign": "center",
        },
        Object {
          "fontFamily": ".SFUIDisplay-medium",
        },
      ]
    }
  >
    foo
  </Text>
</View>
`;

exports[`render undefined label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Circle
      borderWidth={0}
      color="#00e0ff"
      formatText={[Function]}
      progress={0.000001}
      showsText={true}
      size={70}
      textStyle={
        Object {
          "color": "#2D3B45",
          "fontFamily": ".SFUIDisplay-medium",
          "fontSize": 16,
        }
      }
      thickness={7}
      unfilledColor="#F5F5F5"
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 8,
          "textAlign": "center",
        },
        Object {
          "fontFamily": ".SFUIDisplay-medium",
        },
      ]
    }
  />
</View>
`;
